--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ApparelKare",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "A E-commerce website.",
+  "description": "An E-commerce backend.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,14 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hasan-py/MERN_Stack_Project_Hayroo_Ecommerce"
+    "url": "https://github.com/TomisinAjayi/Apparelkare-backend"
   },
-  "author": "Hasan | https://hasan-py.github.io",
+  "author": "Tomisin Ajayi | https://tomisinajayi-portfolio.netlify.app/",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hasan-py/MERN_Stack_Project_Hayroo_Ecommerce/issues"
-  },
-  "homepage": "https://github.com/hasan-py/MERN_Stack_Project_Hayroo_Ecommerce#readme",
+  "homepage": "https://github.com/TomisinAjayi/Apparelkare-backend",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "braintree": "^3.0.0",
